Fix overflow issue on x axis

--- a/src/pages/PokemonMap.css
+++ b/src/pages/PokemonMap.css
@@ -28,7 +28,6 @@
 #pokemon-map-wrapper {
   position: relative;
   overflow: hidden;
-  overflow-x: scroll;
 }
 #menu-pokemon-list {
   height: 18vw;
